Adjust noatime and curl check

--- a/pre-install-checks.conf
+++ b/pre-install-checks.conf
@@ -31,10 +31,10 @@ n~  iptables CHECK~ if [ "`chkconfig iptables --list | grep :on`" ]; then echo "
 n~  ip6tables CHECK~ if [ "`chkconfig ip6tables --list | grep :on`" ]; then echo "failed"; else echo "passed"; fi~    Please unsure all ip6tables run levels are off
 n~  dhcp CHECK~ if [ "`cat /etc/sysconfig/network-scripts/ifcfg-eth* | grep BOOTPROTO=dhcp`" ]; then echo "passed"; else echo "failed"; fi~ Check your DCHP configuration
 n~  static IP CHECK~ if [ "`cat /etc/sysconfig/network-scripts/ifcfg-eth* | grep BOOTPROTO=static`" ]; then echo "passed"; else echo "failed"; fi~ Check to ensure static IPs are set
-n~  curl CHECK~ if [ "`curl -I -s -S  archive.cloudera.com | grep Location:`" ]; then echo "passed"; else echo "failed"; fi~    Run the curl -I -S archive.cloudera.com to ensure access
+n~  curl CHECK~ if [ "`curl -I -s -S  archive.cloudera.com | grep '200 OK'`" ]; then echo "passed"; else echo "failed"; fi~    Run the curl -I -S archive.cloudera.com to ensure access
 #
 ################# Disk related checks #################
-d~	Mount Options noatime AND nodirtime CHECK~	if [ "`mount | grep -E '(noatime)(nodiratime)'`" ]; then echo "passed"; else echo "failed"; fi~	Make sure datanode partitions are mounted with "noatime" AND "nodiratime"
+d~	Mount Options noatime CHECK~	if [ "`mount | grep -E '(noatime)'`" ]; then echo "passed"; else echo "failed"; fi~	Make sure datanode partitions are mounted with "noatime" (Implies "nodiratime")
 d~  lvm CHECK~  if [ "`df -Th | grep -E 'mapper|sd'`" ]; then echo "failed"; else echo "passed"; fi~ Make sure your mounts / partitions are not manamged by LVM
 #
 ################# General config related checks #################
