Added new checks and fixed readme.

--- a/pre-install-checks.conf
+++ b/pre-install-checks.conf
@@ -13,6 +13,10 @@ l~k=Kernel Setting Checks
 #
 ################# Information only commands #################
 a~	System Info~	uname -a
+a~  TOTAL Node Ram~  awk '/^MemTotal:/{print $2/1024/1024 " GB"}' /proc/meminfo
+a~  TOTAL Node CPU Cores~    egrep '^cpu cores' /proc/cpuinfo | sort -u
+a~  TOTAL Node Physical CPUs~   egrep '^physical id' /proc/cpuinfo | sort -u | wc -l
+a~  TOTAL Node # of Disks~  df -l | awk '/^\/dev/ {print $1}' | tr -d '[0-9]' | sort -u | wc -l
 a~	User Info~	who am i
 a~	Date~	date
 a~	Ping Info~	ping -c 1 $(hostname) | awk '/PING/ {print $2,$3}'~	\n1.) Check for fully qualified domain name \n2.) Domain resolves to the private network \n3.) IP is static address expected
