Update swappiness check

--- a/pre-install-checks.conf
+++ b/pre-install-checks.conf
@@ -42,7 +42,7 @@ g~  selinux CHECK~  if [ "`cat /etc/sysconfig/selinux | grep -E 'SELINUX=disable
 #
 ################# Kernel config related checks #################
 k~  hugepage CHECK~ if [ "`cat /sys/kernel/mm/redhat_transparent_hugepage/enabled | grep -E '\[never\]'`" ]; then echo "passed"; else echo "failed"; fi~    Make sure hugepage is set to [never]
-k~  swappiness CHECK~  if [ "`cat /proc/sys/vm/swappiness`" -eq 0 ]; then echo "passed"; else echo "failed"; fi~ Make sure 0 (zero) exists in /proc/sys/vm/swappiness
+k~  swappiness CHECK~  if [ "`cat /proc/sys/vm/swappiness`" -le 10 ]; then echo "passed"; else echo "failed"; fi~ Make sure /proc/sys/vm/swappiness is less than or equal to 10
 
 ################# Additional System Information #################
 #cat /etc/redhat-release
